🚑 バグってるところ確認
